<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/nombreYApellidos"
        android:layout_width="375dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/nombre_y_apellidos"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <EditText
        android:id="@+id/Presupuesto"
        android:layout_width="205dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="3dp"
        android:hint="@string/presupuesto"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nombreYApellidos" />

    <TextView
        android:id="@+id/textViewDestino"
        android:layout_width="196dp"
        android:layout_height="23dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="100dp"
        android:text="@string/a_qu_destino_quiere_ir"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="247dp"
        android:layout_height="145dp"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewDestino">

        <RadioButton
            android:id="@+id/opcion_peninsular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:tag="600"
            android:text="@string/costa_peninsular_600" />

        <RadioButton
            android:id="@+id/opcion_insular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:tag="900"
            android:text="@string/costa_insular_900" />

        <RadioButton
            android:id="@+id/opcion_interior"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:tag="520"
            android:text="@string/turismo_de_interior_520" />
    </RadioGroup>

    <Switch
        android:id="@+id/switch_iva"
        android:layout_width="362dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="20dp"
        android:text="@string/i_v_a"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <Button
        android:id="@+id/boton_mostrar"
        android:layout_width="365dp"
        android:layout_height="44dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="20dp"
        android:text="@string/mostrar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switch_iva" />

    <TextView
        android:id="@+id/precio_final"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="20dp"
        android:text="@string/precio_final"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/boton_mostrar" />

</androidx.constraintlayout.widget.ConstraintLayout>